# cg-image-filter

./: README.md  __init__.py  image_filter.py  image_filter_messaging.py  image_filter_nodes.py  list_utility_nodes.py  pyproject.toml  split_by_commas.py  string_utility_nodes.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
js/: filter.css  floating_window.css  floating_window.js  graph_map.js  image_filter.js  log.js  mask_utils.js  popup.js  weak_map.js  zoomed.css
utility_nodes/: list_utility_nodes.py  mask_utility_nodes.py  string_utility_nodes.py
