[project]
name = "cg-image-filter"
description = "A custom node that pauses the flow while you choose which image or images to pass on to the rest of the workflow. Simplified and improved version of cg-image-picker."
version = "0.1"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/chrisgoringe/cg-image-filter"

[tool.comfy]
PublisherId = "chrisgoringe"
DisplayName = "cg-image-filter"
Icon = ""
